# news-feed-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  ai.py  article_update_sql.sql  compose.yaml  config.py  default.config.py  default.env  embedding_utils.py  entry_processor.py  feed_processor.py  feeds.py  filters.py  main.py  model_utils.py  openai_embedding_utils.py  pyproject.toml  requirements.txt  tag_builder.py  tagging_utils.py  top_results.sql  utils.py
